Added additional portfolio content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
 
         <!-- Footer -->
         <footer id="footer">
+	<h1 class="heading">Connect with me</h1>
             <ul class="icons">
 	 {% if site.resume_name %}
               <li>
