--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 	<body id="top">
 
       <header id="header">
-          <a href="/#about" class="image avatar"><img src="/images/avatar.jpg" alt="" /></a>
+          <a href="/" class="image avatar"><img src="/images/avatar.jpg" alt="" /></a>
           <h1><strong>Hi! I'm Paul Wang</strong><br />
           A first year CS student at the <br />
           University of British Columbia</h1>
