--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
+<!-- added this part to avoid slow css load time running skel js on chrome browser -->
   <link rel="stylesheet" href="/css/skel.css" />
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/style-xlarge.css" media="(max-width: 1800px)" />
@@ -12,18 +13,26 @@
   <link rel="stylesheet" href="/css/style-medium.css" media="(max-width: 980px)" />
   <link rel="stylesheet" href="/css/style-small.css" media="(max-width: 736px)" />
   <link rel="stylesheet" href="/css/style-xlarge.css" media="(max-width: 480px)" />
+<!---->
   <script src="/js/jquery.min.js"></script>
   <script src="/js/skel.min.js"></script>
   <script src="/js/init.js"></script>
+<script>
+function loadURL(url, offsetId = 'main') {
+ 	   $('#main').load(url);
+	window.location.href = '#'+offsetId;
+}
+</script>
 </head>
 
 <body id="top">
 
   <header id="header">
-    <a href="/" class="image avatar"><img src="/images/avatar.jpg" alt="" /></a>
+    <div onclick="loadURL('main.html')" class="image avatar mouse-hover"><img src="/images/avatar.jpg" alt="" /></div>
     <h1><strong>Hi! I'm Paul Wang</strong><br />
-      A second year CS student at the <br />
-      University of British Columbia</h1>
+      A second year CS Student<br />
+	and Teaching Assistant at<br />
+	the University of British Columbia</h1>
     </header>
 
 
