--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,20 @@
-    <article>
-        <header class="major">
-            <h2 class="post-title">{{ page.title }}</h2>
-                <p class="post-meta">{{ page.date | date: "%b %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-        </header>
-
-        <section>
-            {{ content }}
-        </section>
-        <br>
-        <footer>
-            <div onclick="loadURL('main.html', 'portfolio')" class="button">Back to Portfolio</div>
-	<br>
-        </footer>
-
-    </article>
+<article>
+  <header class="major">
+    <h2 class="post-title">
+    {{ page.title }}
+    </h2>
+    <p class="post-meta">
+    {{ page.date | date: "%b %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
+    </p>
+  </header>
+  <section>
+  {{ content }}
+  </section>
+  <br>
+  <footer>
+    <div onclick="loadURL('main.html', 'portfolio')" class="button">
+      Back to Portfolio
+    </div>
+    <br>
+  </footer>
+</article>
