--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@ function loadURL(url, offsetId) {
 <body id="top">
   <header id="header">
     <div id="portrait" onclick="loadURL('main.html')" class="image avatar mouse-hover">
-      <img src="/images/avatar.jpg" alt="" />
+      <img class="image" src="/images/avatar.jpg" alt="" />
     </div>
     <h1><strong>Hello! I'm Paul Wang</strong><br/>
       A third year CS Student and<br/>
