--- a/css/style.css
+++ b/css/style.css
@@ -852,103 +852,103 @@ nav li {
   overflow: hidden;
   padding-bottom: 3em
 }
-  .poptrox-popup .loader {
-    text-decoration: none;
-    -moz-animation: spin 1s linear infinite;
-    -webkit-animation: spin 1s linear infinite;
-    -o-animation: spin 1s linear infinite;
-    -ms-animation: spin 1s linear infinite;
-    animation: spin 1s linear infinite;
-    font-size: 1.5em;
-    height: 1em;
-    left: 50%;
-    line-height: 1em;
-    margin: -.5em 0 0 -.5em;
-    position: absolute;
-    top: 50%;
-    width: 1em
-  }
-  .poptrox-popup .loader:before {
-    content: '\f1ce'
+.poptrox-popup .loader {
+  text-decoration: none;
+  -moz-animation: spin 1s linear infinite;
+  -webkit-animation: spin 1s linear infinite;
+  -o-animation: spin 1s linear infinite;
+  -ms-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+  font-size: 1.5em;
+  height: 1em;
+  left: 50%;
+  line-height: 1em;
+  margin: -.5em 0 0 -.5em;
+  position: absolute;
+  top: 50%;
+  width: 1em
 }
-  .poptrox-popup .caption {
-    background: #fff;
-    bottom: 0;
-    cursor: default;
-    font-size: .9em;
-    height: 3em;
-    left: 0;
-    line-height: 2.8em;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-    z-index: 1
-  }
-  .poptrox-popup .nav-next,.poptrox-popup .nav-previous {
-    -o-transition: opacity .2s ease-in-out;
-    transition: opacity .2s ease-in-out;
-    -webkit-tap-highlight-color: rgba(255,255,255,0);
-    background: rgba(0,0,0,.01);
-    cursor: pointer;
-    height: 100%;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    width: 50%
-  }
-  .poptrox-popup .nav-next:before, .poptrox-popup .nav-previous:before {
-    color: #fff;
-    font-size: 2.5em;
-    height: 1em;
-    line-height: 1em;
-    margin-top: -.75em;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    width: 1.5em
-  }
-  .poptrox-popup .nav-next {
-    right: 0
-  }
-  .poptrox-popup .nav-next:before {
-    content: '\f105';
+.poptrox-popup .loader:before {
+  content: '\f1ce'
+}
+.poptrox-popup .caption {
+  background: #fff;
+  bottom: 0;
+  cursor: default;
+  font-size: .9em;
+  height: 3em;
+  left: 0;
+  line-height: 2.8em;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  z-index: 1
+}
+.poptrox-popup .nav-next,.poptrox-popup .nav-previous {
+  -o-transition: opacity .2s ease-in-out;
+  transition: opacity .2s ease-in-out;
+  -webkit-tap-highlight-color: rgba(255,255,255,0);
+  background: rgba(0,0,0,.01);
+  cursor: pointer;
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: 50%
+}
+.poptrox-popup .nav-next:before, .poptrox-popup .nav-previous:before {
+  color: #fff;
+  font-size: 2.5em;
+  height: 1em;
+  line-height: 1em;
+  margin-top: -.75em;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 1.5em
+}
+.poptrox-popup .nav-next {
   right: 0
 }
-  .poptrox-popup .nav-previous {
-    left: 0
-  }
-  .poptrox-popup .nav-previous:before {
-    content: '\f104';
+.poptrox-popup .nav-next:before {
+  content: '\f105';
+  right: 0
+}
+.poptrox-popup .nav-previous {
   left: 0
 }
-  .poptrox-popup .closer {
-    text-decoration: none;
-    -moz-transition: opacity .2s ease-in-out;
-    -webkit-transition: opacity .2s ease-in-out;
-    -o-transition: opacity .2s ease-in-out;
-    -ms-transition: opacity .2s ease-in-out;
-    transition: opacity .2s ease-in-out;
-    -webkit-tap-highlight-color: rgba(255,255,255,0);
-    color: #fff;
-    height: 4em;
-    line-height: 4em;
-    opacity: 0;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    top: 0;
-    width: 4em;
-    z-index: 2
-  }
-  .poptrox-popup .closer:before {
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    -o-box-sizing: content-box;
-    -ms-box-sizing: content-box;
-    box-sizing: content-box;
-    border-radius: 100%;
-    border: 3px solid rgba(255,255,255,.5);
-    content: '\f00d';
+.poptrox-popup .nav-previous:before {
+  content: '\f104';
+  left: 0
+}
+.poptrox-popup .closer {
+  text-decoration: none;
+  -moz-transition: opacity .2s ease-in-out;
+  -webkit-transition: opacity .2s ease-in-out;
+  -o-transition: opacity .2s ease-in-out;
+  -ms-transition: opacity .2s ease-in-out;
+  transition: opacity .2s ease-in-out;
+  -webkit-tap-highlight-color: rgba(255,255,255,0);
+  color: #fff;
+  height: 4em;
+  line-height: 4em;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 4em;
+  z-index: 2
+}
+.poptrox-popup .closer:before {
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  -o-box-sizing: content-box;
+  -ms-box-sizing: content-box;
+  box-sizing: content-box;
+  border-radius: 100%;
+  border: 3px solid rgba(255,255,255,.5);
+  content: '\f00d';
   display: block;
   font-size: 1em;
   height: 1.75em;
@@ -959,37 +959,65 @@ nav li {
   top: 50%;
   width: 1.75em
 }
-  .poptrox-popup:hover .nav-next,.poptrox-popup:hover .nav-previous {
-    opacity: .5
-  }
-  .poptrox-popup:hover .nav-next:hover,.poptrox-popup:hover .nav-previous:hover {
-    opacity: 1
-  }
-  .poptrox-popup:hover .closer {
-    opacity: .5
-  }
-  .poptrox-popup:hover .closer:hover {
-    opacity: 1
-  }
-  body.is-touch .image.thumb:before {
-    opacity: .5!important
-  }
-  body.is-touch .image.thumb:after {
-    display: none!important
-  }
-  body.is-touch #header {
-    background-attachment: scroll;
-    background-size: auto, cover
-  }
-  body.is-touch .poptrox-popup .closer,body.is-touch .poptrox-popup .nav-next,body.is-touch .poptrox-popup .nav-previous {
-    opacity: 1!important
-  }
-  body {
-    background: #f7f7f7
-  }
-  #headimage {
-    background-color: #000
-  }
-  .mouse-hover {
-    cursor: pointer
-  }
+.poptrox-popup:hover .nav-next,.poptrox-popup:hover .nav-previous {
+  opacity: .5
+}
+.poptrox-popup:hover .nav-next:hover,.poptrox-popup:hover .nav-previous:hover {
+  opacity: 1
+}
+.poptrox-popup:hover .closer {
+  opacity: .5
+}
+.poptrox-popup:hover .closer:hover {
+  opacity: 1
+}
+body.is-touch .image.thumb:before {
+  opacity: .5!important
+}
+body.is-touch .image.thumb:after {
+  display: none!important
+}
+body.is-touch #header {
+  background-attachment: scroll;
+  background-size: auto, cover
+}
+body.is-touch .poptrox-popup .closer,body.is-touch .poptrox-popup .nav-next,body.is-touch .poptrox-popup .nav-previous {
+  opacity: 1!important
+}
+body {
+  background: #f7f7f7
+}
+#headimage {
+  background-color: #000
+}
+.mouse-hover {
+  cursor: pointer
+}
+
+#portrait .image{
+  height: 100%;
+  width: 100%;
+  transition: .5s ease;
+}
+#portrait:hover .image{
+  height: 130%;
+  width: 130%;
+  transition: .5s ease;
+}
+
+.portfolio-section:hover .h{
+  color: #000;
+  transition: .8s ease;
+}
+.portfolio-section:hover {
+  color: #000;
+  transition: .8s ease;
+}
+.portfolio-section {
+  color: #787878;
+  transition: .3s ease;
+}
+.portfolio-section .h{
+  color: #787878;
+  transition: .3s ease;
+}
