--- a/css/style.css
+++ b/css/style.css
@@ -334,31 +334,49 @@ input[type=radio]+label:before {
   border-radius: .35em;
   position: absolute
 }
-.image:before {
-  -moz-transition: opacity .2s ease-in-out;
-  -webkit-transition: opacity .2s ease-in-out;
-  -ms-transition: opacity .2s ease-in-out;
-  transition: opacity .2s ease-in-out;
-  background: url(images/overlay.png);
-  content: '';
-  display: block;
-  height: 100%;
-  left: 0;
-  opacity: .2;
-  top: 0;
-  width: 100%
-}
 .image.thumb:after, .poptrox-popup .nav-next, .poptrox-popup .nav-previous {
   -moz-transition: opacity .2s ease-in-out;
   -webkit-transition: opacity .2s ease-in-out;
   -ms-transition: opacity .2s ease-in-out;
   text-decoration: none
 }
+.image.thumb {
+  display: inline-block;
+  overflow: hidden;
+  background: none;
+  -webkit-transition:all 0.3s ease-in-out;
+  -moz-transition:all 0.3s ease-in-out;
+  -o-transition:all 0.3s ease-in-out;
+  -ms-transition:all 0.3s ease-in-out;
+  transition:all 0.3s ease-in-out;
+}
+.image.thumb:hover {
+  -webkit-transition:all 0.3s ease-in-out;
+  -moz-transition:all 0.3s ease-in-out;
+  -o-transition:all 0.3s ease-in-out;
+  -ms-transition:all 0.3s ease-in-out;
+  transition:all 0.3s ease-in-out;
+  background: rgba(0,0,0,0.6);
+}
+.image.thumb:hover img {
+  -moz-transform: scale(1.15);
+  -webkit-transform: scale(1.15);
+  transform: scale(1.15);
+  opacity: 0.5;
+}
+.image.thumb img {
+  -webkit-transition:all 0.25s ease-in-out;
+  -moz-transition:all 0.25s ease-in-out;
+  -o-transition:all 0.25s ease-in-out;
+  -ms-transition:all 0.25s ease-in-out;
+  transition:all 0.25s ease-in-out;
+  opacity: 1;
+}
 .image.thumb:after {
   transition: opacity .2s ease-in-out;
   border: 3px solid rgba(255,255,255,.5);
   color: #fff;
-  content: 'View';
+  content: 'Details';
   display: inline-block;
   font-size: .8em;
   font-weight: 400;
@@ -370,10 +388,6 @@ input[type=radio]+label:before {
   white-space: nowrap
 }
 .image.thumb:hover:after {
-  opacity: 1
-}
-.image.thumb:hover:before {
-  background: url(images/overlay.png), url(images/overlay.png);
   opacity: 1
 }
 .image img {
@@ -718,7 +732,7 @@ input[type=reset]:disabled, input[type=button].disabled, input[type=button]:disa
   display: inline-block;
   line-height: 1em;
   margin-left: .75em;
-  adding-left: .75em
+  padding-left: .75em
 }
 #footer .copyright li:first-child {
   border-left: 0;
@@ -1000,8 +1014,8 @@ body {
   transition: .5s ease;
 }
 #portrait:hover .image{
-  height: 130%;
-  width: 130%;
+  height: 120%;
+  width: 120%;
   transition: .5s ease;
 }
 
@@ -1020,4 +1034,9 @@ body {
 .portfolio-section .h{
   color: #787878;
   transition: .3s ease;
+}
+.shadow {
+  -webkit-box-shadow: 0px 4px 3px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 4px 3px rgba(0,0,0,0.25);
+  box-shadow: 0px 4px 3px rgba(0,0,0,0.25);
 }
